CSS spacing fixes for lists

--- a/style.scss
+++ b/style.scss
@@ -66,6 +66,12 @@ h2 {
 	margin: 0 0 8px;
 }
 
+h3 {
+	@include headline6;
+	font-weight: 500;
+	margin: 0 0 8px;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
@@ -310,9 +316,10 @@ hr {
 }
 
 .projects ul { 
-	margin-bottom: 64px; 
-	
-	// li:not(:last-child) { margin-bottom: 16px; }
+	margin-bottom: 32px; 
+	span { margin-bottom: 8px; }
+
+	&.list-item__spacing li:not(:last-child) { margin-bottom: 16px; }
 }
 
 footer {
